Ensure site nav aligns with hero

--- a/src/assets/css/sections/header.css
+++ b/src/assets/css/sections/header.css
@@ -41,7 +41,7 @@ header {
 
 nav.page {
   @mixin flex-row var(--space-8), flex-start, space-between;
-  padding: var(--space-24) var(--space-32) var(--space-32);
+  padding: var(--space-24) 0 var(--space-32);
   height: 100%;
   font-weight: 500;
   font-variations-settings: "wght" 500;
